--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>사회복무요원 복무지</title>
 </head>
 <body>
-    <div id="map" style="width:100%;height:100%;"></div>
+    <div id="map" style="width:100px;height:100px;"></div>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1c6a3c44da442604d39f9345042a6498"></script>
 	<script>
 		var container = document.getElementById('map');
