--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="utf-8">
     <title>사회복무요원 복무지</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div id="map" style="width:100px;height:100px;"></div>
+    <div id="map" style="width:100%;height:100%;"></div>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1c6a3c44da442604d39f9345042a6498"></script>
 	<script>
 		var container = document.getElementById('map');
 		var options = {
-			center: new kakao.maps.LatLng(33.450701, 126.570667),
-			level: 3
+			center: new kakao.maps.LatLng(36.477761935231484, 127.87898878809636),
+			level: 12
 		};
 
 		var map = new kakao.maps.Map(container, options);
